--- a/Love-Simulator.html
+++ b/Love-Simulator.html
@@ -12,36 +12,72 @@
       text-align: center;
       margin: 0;
       padding: 20px;
+      cursor: none; /* Hide system cursor */
+      overflow: hidden;
     }
+
+    #stickContainer {
+      position: relative;
+      width: 60px;
+      height: 300px;
+      margin: 40px auto;
+    }
+
     #stick {
       width: 60px;
       height: 300px;
       background: #8b5a2b;
-      margin: 40px auto;
       border-radius: 20px;
+      position: absolute;
+      top: 0;
+      left: 0;
       box-shadow: 0 0 10px #8b5a2b;
-      transition: transform 0.1s;
-      cursor: pointer;
     }
-    #stick:hover {
-      transform: scale(1.05);
+
+    #tip {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 60px;
+      height: 40px;
+      background: #8b5a2b;
+      border-radius: 20px 20px 0 0;
+      z-index: 2;
+      transition: background 0.5s;
     }
+
     #score {
       font-size: 24px;
       margin-bottom: 20px;
     }
+
     #leaderboard {
       margin-top: 40px;
     }
+
     .leaderboard-entry {
       font-size: 18px;
+    }
+
+    #hand {
+      position: fixed;
+      width: 40px;
+      height: 40px;
+      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Hand_cursor_font_awesome.svg/64px-Hand_cursor_font_awesome.svg.png') no-repeat center;
+      background-size: contain;
+      pointer-events: none;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <h1> Caress the Stick</h1>
+  <h1>🪵 Caress the Stick</h1>
   <div id="score">Score: 0</div>
-  <div id="stick" onclick="caressStick()"></div>
+
+  <div id="stickContainer">
+    <div id="tip"></div>
+    <div id="stick"></div>
+  </div>
 
   <div id="leaderboard">
     <h2>🏆 Leaderboard</h2>
@@ -49,16 +85,65 @@
     <div class="leaderboard-entry" id="playerEntry">🥈 You - 0</div>
   </div>
 
+  <div id="hand"></div>
+
   <script>
     let score = 0;
+    let lastY = null;
+    let movedUp = false;
+    let movedDown = false;
+
     const scoreDisplay = document.getElementById("score");
     const playerEntry = document.getElementById("playerEntry");
+    const tip = document.getElementById("tip");
+    const stickContainer = document.getElementById("stickContainer");
 
-    function caressStick() {
-      score += Math.floor(Math.random() * 10) + 1; // adds 1–10 points
+    stickContainer.addEventListener("mousemove", (e) => {
+      const rect = stickContainer.getBoundingClientRect();
+      const y = e.clientY - rect.top;
+
+      if (lastY !== null) {
+        if (y < lastY) movedUp = true;
+        else if (y > lastY) movedDown = true;
+
+        if (movedUp && movedDown) {
+          increaseScore();
+          movedUp = false;
+          movedDown = false;
+        }
+      }
+
+      lastY = y;
+    });
+
+    function increaseScore() {
+      score++;
       scoreDisplay.innerText = "Score: " + score;
       playerEntry.innerText = "🥈 You - " + score.toLocaleString();
+
+      if (score >= 100) {
+        tip.style.background = "white";
+      }
     }
+
+    // Jiggle hand cursor
+    const hand = document.getElementById('hand');
+    let mouseX = 0, mouseY = 0;
+    let handX = 0, handY = 0;
+
+    document.addEventListener('mousemove', (e) => {
+      mouseX = e.clientX;
+      mouseY = e.clientY;
+    });
+
+    function animateHand() {
+      handX += (mouseX - handX) * 0.1;
+      handY += (mouseY - handY) * 0.1;
+      hand.style.transform = `translate(${handX}px, ${handY}px)`;
+      requestAnimationFrame(animateHand);
+    }
+
+    animateHand();
   </script>
 </body>
 </html>
