--- a/Love-Simulator.html
+++ b/Love-Simulator.html
@@ -63,7 +63,7 @@
       position: fixed;
       width: 40px;
       height: 40px;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Hand_cursor_font_awesome.svg/64px-Hand_cursor_font_awesome.svg.png') no-repeat center;
+      background: url('https://png.pngtree.com/png-clipart/20220628/ourmid/pngtree-finger-human-hand-grasp-png-image_5376101.png') no-repeat center;
       background-size: contain;
       pointer-events: none;
       z-index: 999;
