--- a/Love-Simulator.html
+++ b/Love-Simulator.html
@@ -12,8 +12,9 @@
       text-align: center;
       margin: 0;
       padding: 20px;
-      cursor: none; /* Hide system cursor */
+      cursor: none;
       overflow: hidden;
+      position: relative;
     }
 
     #stickContainer {
@@ -32,6 +33,8 @@
       top: 0;
       left: 0;
       box-shadow: 0 0 10px #8b5a2b;
+      z-index: 1;
+      transition: background 1s;
     }
 
     #tip {
@@ -69,6 +72,44 @@
       z-index: 9999;
       transform: translate(-50%, -50%);
     }
+
+    .drip {
+      position: absolute;
+      width: 10px;
+      height: 30px;
+      background: rgba(0, 0, 255, 0.5);
+      border-radius: 5px;
+      animation: dripDown 2s linear forwards;
+    }
+
+    @keyframes dripDown {
+      from { top: 150px; opacity: 1; }
+      to { top: 350px; opacity: 0.8; }
+    }
+
+    #floorPuddle {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 200px;
+      height: 30px;
+      background: rgba(0, 0, 255, 0.2);
+      border-radius: 50%;
+      display: none;
+      z-index: 0;
+    }
+
+    #screenOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 255, 0.15);
+      z-index: 0;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -87,6 +128,8 @@
   </div>
 
   <div id="hand"></div>
+  <div id="floorPuddle"></div>
+  <div id="screenOverlay"></div>
 
   <script>
     let score = 0;
@@ -97,8 +140,10 @@
     const scoreDisplay = document.getElementById("score");
     const playerEntry = document.getElementById("playerEntry");
     const tip = document.getElementById("tip");
+    const stick = document.getElementById("stick");
     const stickContainer = document.getElementById("stickContainer");
-    const hand = document.getElementById("hand");
+    const floorPuddle = document.getElementById("floorPuddle");
+    const screenOverlay = document.getElementById("screenOverlay");
 
     stickContainer.addEventListener("mousemove", (e) => {
       const rect = stickContainer.getBoundingClientRect();
@@ -123,12 +168,26 @@
       scoreDisplay.innerText = "Score: " + score;
       playerEntry.innerText = "🥈 You - " + score.toLocaleString();
 
-      if (score >= 100) {
-        tip.style.background = "white";
+      if (score >= 100) tip.style.background = "white";
+      if (score === 150) startDripping();
+      if (score === 200) floorPuddle.style.display = "block";
+      if (score === 340) screenOverlay.style.display = "block";
+      if (score === 500) stick.style.background = "#deb887"; // tan color
+    }
+
+    function startDripping() {
+      for (let i = 0; i < 5; i++) {
+        const drip = document.createElement("div");
+        drip.classList.add("drip");
+        drip.style.left = `${30 + Math.random() * 10}px`;
+        drip.style.top = `${150 + Math.random() * 10}px`;
+        drip.style.animationDelay = `${i * 0.3}s`;
+        stickContainer.appendChild(drip);
       }
     }
 
-    // Follow mouse exactly
+    // Follow mouse with hand
+    const hand = document.getElementById('hand');
     document.addEventListener("mousemove", (e) => {
       hand.style.left = e.clientX + "px";
       hand.style.top = e.clientY + "px";
